--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,8 @@ Navbar
 .nav {
   height: 5rem;
   padding: 1rem;
-  /* display: grid; */
+  display: grid;
+  grid-template-columns: 1fr;
   justify-content: center;
   transition: var(--transition);
 }
@@ -191,7 +192,7 @@ Navbar
 
 .nav-header {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
   align-items: center;
 }
 
@@ -206,7 +207,6 @@ Navbar
 
 @media (min-width: 768px) {
   .nav {
-    display: grid;
     background: var(--clr-primary-10);
   }
 
@@ -217,6 +217,27 @@ Navbar
   .nav-links {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    column-gap: 2rem;
+    justify-items: center;
+    justify-self: end;
+  }
+
+  .nav-links a {
+    text-transform: capitalize;
+    color: var(--clr-grey-1);
+    font-weight: bold;
+    letter-spacing: var(--spacing);
+    transition: var(--transition);
+  }
+
+  .nav-links a:hover {
+    color: var(--clr-primary-5);
+  }
+
+  .nav-center {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
   }
 }
 /*
