--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,16 @@ Navbar
     align-items: center;
   }
 }
-
+/* fixed navbar */
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-white);
+  z-index: 2;
+  box-shadow: var(--light-shadow);
+}
 /*
 =============== 
 Sidebar
@@ -257,7 +266,11 @@ Sidebar
   display: grid;
   place-items: center;
   transition: var(--transition);
-  /* transform: translateX(-100%); */
+  transform: translateX(-100%);
+}
+
+.show-sidebar {
+  transform: translateX(0%);
 }
 
 .sidebar-links {
@@ -305,6 +318,7 @@ Sidebar
   border: transparent;
   transition: var(--transition);
   color: #bb2525;
+  cursor: pointer;
 }
 
 .close-btn:hover {
@@ -316,8 +330,33 @@ Sidebar
 Hero
 ===============
 */
-/* underline added to globals */
 
+/* underline added to globals */
+.underline {
+  width: 5rem;
+  height: 0.25rem;
+  margin-bottom: 1.25rem;
+  background: var(--clr-primary-5);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero .underline {
+  margin-bottom: 0.5rem;
+  margin-left: 0;
+}
+
+.hero-img {
+  display: none;
+}
+
+.hero {
+  background: var(--clr-primary-10);
+}
+
+.hero-center {
+  /* min-height: ; */
+}
 /*
 =============== 
 About
